--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   dynamic_color: ^1.7.0
+  flutter_localization: ^0.3.3
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
@@ -21,4 +23,5 @@ dev_dependencies:
   flutter_lints: ^5.0.0
 
 flutter:
+  generate: true
   uses-material-design: true
