--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/navigation/
+    - assets/svgs/
   fonts:
     - family: HelveticaNeue
       fonts:
