--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,13 +26,22 @@ dev_dependencies:
 flutter:
   generate: true
   uses-material-design: true
+
   assets:
     - assets/navigation/
     - assets/svgs/
+
   fonts:
     - family: HelveticaNeue
       fonts:
         - asset: assets/fonts/HelveticaNeue-Medium.otf
           weight: 500
         - asset: assets/fonts/HelveticaNeue-Roman.otf
+          weight: 400
+        - asset: assets/fonts/BpgGel.ttf
+          weight: 400
+
+    - family: BpgGel
+      fonts:
+        - asset: assets/fonts/BpgGel.ttf
           weight: 400
