--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,10 @@ dependencies:
   intl: ^0.20.2
   go_router: ^16.0.0
   flutter_svg: ^2.2.0
+  dio: ^5.8.0+1
+  pretty_dio_logger: ^1.4.0
+  get_it: ^8.0.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
