add obligation transactions endpoint and add slide animation when navigating

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   dio: ^5.8.0+1
   pretty_dio_logger: ^1.4.0
   get_it: ^8.0.3
+  syncfusion_flutter_pdfviewer: ^30.1.40
 
 dev_dependencies:
   flutter_test:
