--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   pretty_dio_logger: ^1.4.0
   get_it: ^8.0.3
   syncfusion_flutter_pdfviewer: ^30.1.40
+  equatable: ^2.0.7
+  flutter_bloc: ^9.1.1
 
 dev_dependencies:
   flutter_test:
